--- a/index.html
+++ b/index.html
@@ -160,12 +160,18 @@
 				</section>
 
 					<section data-auto-animate>
-						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">Master Thesis</p>
+						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">Master Thesis: Hot sdBs in EBs</p>
     					<div class="row" style="center">
             					<img src="examples/assets/HRD_sdOB.png" width="550px">
 </div>
 					</section>
 
+					<section data-auto-animate>
+						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">T. Kupfer Period distribution: Add figure</p>
+    					<div class="row" style="center">
+            					<img src="examples/assets/HRD_sdOB.png" width="550px">
+</div>
+					</section>
 
 				<section data-background-video="examples/assets/Turbulent Times_ When stars approach.mp4" data-auto-animate></section>
 
@@ -174,7 +180,14 @@
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">Stellar Pulsations</p>
 
 					</section>
-				</section>
+					<section data-background-image="examples/assets/radial_cutaway_delta_scuti.gif" data-auto-animate data-background-opacity='1'></section>
+				
+			<section data-background-video="examples/assets/Delta_scuti_pulsations.mp4" data-auto-animate data-background-opacity='0.5'>
+					<p>	<b>Asteroseismology</b>
+            				</p>
+			</section>
+</section>
+
 				<section>
 
 					<section data-auto-animate>
@@ -188,6 +201,9 @@
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1.8em; letter-spacing: 0.15em;">Spectral Analysis: GSSP</p>
 					</section>
+
+					<section data-background-image="examples/assets/GSSP_AI_Hya_components.png" data-auto-animate data-background-opacity='1'></section>
+
 
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1.8em; letter-spacing: 0.15em;">Eclipse Time Variations</p>
@@ -254,8 +270,8 @@
             				</p>
 	</section>
 
-<section data-background-image="examples/assets/AI_Hya_model.png" data-auto-animate data-background-opacity='1'></section>
-	<section data-background-image="examples/assets/AI_Hya_model_pulsations.png" data-auto-animate data-background-opacity='0.3'>
+
+	<section data-background-image="examples/assets/AI_Hya_model.png" data-auto-animate data-background-opacity='0.6'>
 		<p>	<ul>
             						<li style="padding-bottom: 14px;  color: darkred;"><b>Secondary Pulsator</b></li>
             						<li style="padding-bottom: 14px;  color: darkred;"><b>Multi-Periodic pulsations</b></li>
@@ -263,6 +279,7 @@
             					</ul>
             				</p>
 	</section>
+	<section data-background-image="examples/assets/AI_Hya_model_pulsations.png" data-auto-animate data-background-opacity='1'></section>
 
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">Spectral Analysis</p>
@@ -281,6 +298,13 @@
             				</p>
 	</section>
 </section>
+
+				<section>
+
+					<section data-auto-animate>
+						<p data-id="text-props" style="background: #f7f3de; line-height: 2.0em; letter-spacing: 0.17em;">The Bigger Picture</p>
+					</section>
+				</section>
 <!--
 
 				<section data-transition="zoom-in fade-out">Spectroscopy</section>
