--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 	</section>
 			<section data-background-image="examples/assets/stellar_evolution.jpeg" data-auto-animate data-background-opacity='0.4'>
 		<p>	<ul>
-            						<li style="padding-bottom: 14px;  color: darkred;"><b>Global Metallicity</b></li>
+            						<li style="padding-bottom: 14px;  color: darkred;"><b>Precise Stellar Parameters</b></li>
             						<li style="padding-bottom: 14px;  color: darkred;"><b>Pulsating Variables in Binaries</b></li>
             						<li style="padding-bottom: 14px;  color: darkred;"><b>Refine Stellar Evolution Models</b></li>
             					</ul>
