--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1.8em; letter-spacing: 0.15em;">Lightcurve Modelling: JKTEBOP</p>
 					</section>
+					<section data-background-image="examples/assets/JKTEBOP_sample.jpeg" data-auto-animate data-background-opacity='1'></section>
 
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1.8em; letter-spacing: 0.15em;">Spectral Analysis: GSSP</p>
@@ -208,6 +209,8 @@
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1.8em; letter-spacing: 0.15em;">Eclipse Time Variations</p>
 					</section>
+
+					<section data-background-image="examples/assets/Kepler_ETV.png" data-auto-animate data-background-opacity='1'></section>
 <!--					<section data-auto-animate>
 						<h2>ETV Analysis</h2>
 						<ul>
@@ -248,12 +251,12 @@
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">Pulsators in Eclipsing Binaries</p>
 
     					<div class="row" style="center">
-            					<img src="examples/assets/AI_Hya_Pulsations_Eclipse_2.jpeg" width="950px">
+            					<img src="examples/assets/AI_Hya_LC.jpeg" width="950px">
             	</div>
 					</section>
 
 
-	<section data-background-image="examples/assets/AI_Hya_Pulsations_Eclipse_2.jpeg" data-auto-animate data-background-opacity='0.3'>
+	<section data-background-image="examples/assets/AI_Hya_LC.jpeg" data-auto-animate data-background-opacity='0.3'>
 		<p>	<ul>
             						<li style="padding-bottom: 14px; color: darkred;"><b>Secondary Pulsator</b></li>
             					</ul>
@@ -285,7 +288,7 @@
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1em; letter-spacing: 0em;">Spectral Analysis</p>
 
     					<div class="row" style="center">
-            					<img src="examples/assets/GSSP_AI_Hya.jpeg" width="1050px">
+            					<img src="examples/assets/GSSP_AI_Hya.jpeg" width="1350px">
             	</div>
 					</section>
 	<section data-background-image="examples/assets/GSSP_AI_Hya.jpeg" data-auto-animate data-background-opacity='0.3'>
