--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
 					<section data-auto-animate>
 						<p data-id="text-props" style="background: #f7f3de; line-height: 1.8em; letter-spacing: 0.15em;">Eclipse Time Variations</p>
 					</section>
+					
+					<section data-background-image="examples/assets/ETVs.png" data-auto-animate data-background-opacity='1'></section>
 
 					<section data-background-image="examples/assets/Kepler_ETV.png" data-auto-animate data-background-opacity='1'></section>
 					
