--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 					</section>
 					<section data-background-image="examples/assets/radial_cutaway_delta_scuti.gif" data-auto-animate data-background-opacity='1'></section>
 				
-			<section data-background-video="examples/assets/Delta_scuti_pulsations.mp4" data-auto-animate data-background-opacity='0.5'>
+			<section data-background-image="examples/assets/pulsator_lc.jpeg" data-auto-animate data-background-opacity='1'></section>
+					<section data-background-video="examples/assets/Delta_scuti_pulsations.mp4" data-auto-animate data-background-opacity='0.5'>
 					<p>	<b>Asteroseismology</b>
             				</p>
 			</section>
